Fix validation errors

--- a/proguard.cfg
+++ b/proguard.cfg
@@ -22,4 +22,5 @@
 
 -allowaccessmodification
 -useuniqueclassmembernames
--repackageclasses org/sandboxpowered/silica/client
+-repackageclasses
+-dontusemixedcaseclassnames
