--- a/build.gradle
+++ b/build.gradle
@@ -48,9 +48,16 @@ repositories {
     mavenCentral()
     maven { url "https://oss.sonatype.org/content/repositories/snapshots/" }
     maven { url 'https://jitpack.io' }
+    maven { url 'https://nexus.sandboxpowered.org/repository/maven-public/' }
 }
 
 dependencies {
+    implementation platform('org.sandboxpowered.api:api:coded-tweaks-SNAPSHOT')
+
+    implementation('org.sandboxpowered.api:base')
+    implementation('org.sandboxpowered.api:rendering')
+    implementation('org.sandboxpowered.api:resources')
+
     implementation 'com.github.JnCrMx:discord-game-sdk4j:8cafb76013'
     implementation group: 'commons-io', name: 'commons-io', version: '2.8.0'
     implementation group: 'org.apache.commons', name: 'commons-lang3', version: '3.11'
@@ -70,7 +77,6 @@ dependencies {
 
     implementation "org.lwjgl:lwjgl"
     implementation "org.lwjgl:lwjgl-assimp"
-    implementation "org.lwjgl:lwjgl-bgfx"
     implementation "org.lwjgl:lwjgl-glfw"
     implementation "org.lwjgl:lwjgl-nfd"
     implementation "org.lwjgl:lwjgl-openal"
@@ -80,11 +86,8 @@ dependencies {
     implementation "org.lwjgl:lwjgl-shaderc"
     implementation "org.lwjgl:lwjgl-stb"
     implementation "org.lwjgl:lwjgl-tinyexr"
-    implementation "org.lwjgl:lwjgl-vma"
-    implementation "org.lwjgl:lwjgl-vulkan"
     runtimeOnly "org.lwjgl:lwjgl::$lwjglNatives"
     runtimeOnly "org.lwjgl:lwjgl-assimp::$lwjglNatives"
-    runtimeOnly "org.lwjgl:lwjgl-bgfx::$lwjglNatives"
     runtimeOnly "org.lwjgl:lwjgl-glfw::$lwjglNatives"
     runtimeOnly "org.lwjgl:lwjgl-nfd::$lwjglNatives"
     runtimeOnly "org.lwjgl:lwjgl-openal::$lwjglNatives"
@@ -94,8 +97,6 @@ dependencies {
     runtimeOnly "org.lwjgl:lwjgl-shaderc::$lwjglNatives"
     runtimeOnly "org.lwjgl:lwjgl-stb::$lwjglNatives"
     runtimeOnly "org.lwjgl:lwjgl-tinyexr::$lwjglNatives"
-    runtimeOnly "org.lwjgl:lwjgl-vma::$lwjglNatives"
-    if (lwjglNatives == "natives-macos") runtimeOnly "org.lwjgl:lwjgl-vulkan::$lwjglNatives"
     implementation "org.joml:joml:${jomlVersion}"
 }
 
