--- a/build.gradle
+++ b/build.gradle
@@ -57,15 +57,15 @@ dependencies {
     implementation 'org.sandboxpowered.api:rendering'
     implementation 'org.sandboxpowered.api:resources'
 
+    implementation 'com.github.zafarkhaja:java-semver:0.9.0'
+    implementation 'org.sandboxpowered:SimpleEventHandler:2.0.3'
+
     implementation 'org.jetbrains:annotations:20.1.0'
 
     implementation 'commons-io:commons-io:2.8.0'
     implementation 'org.apache.commons:commons-lang3:3.11'
-    implementation 'com.google.guava:guava:30.0-jre'
     implementation 'com.google.code.gson:gson:2.8.6'
 
-    implementation 'org.apache.logging.log4j:log4j-api:2.13.3'
-    implementation 'org.apache.logging.log4j:log4j-core:2.13.3'
 
     implementation 'net.sf.jopt-simple:jopt-simple:5.0.4'
 
@@ -99,6 +99,9 @@ dependencies {
     runtimeOnly "org.lwjgl:lwjgl-stb::$lwjglNatives"
     runtimeOnly "org.lwjgl:lwjgl-tinyexr::$lwjglNatives"
     implementation "org.joml:joml:${jomlVersion}"
+    implementation 'org.apache.logging.log4j:log4j-api:2.14.0'
+    implementation 'org.apache.logging.log4j:log4j-core:2.14.0'
+    implementation 'com.google.guava:guava:30.1-jre'
 }
 
 task optimizeJar(type: ProGuardTask, dependsOn: jar) {
