--- a/settings.gradle
+++ b/settings.gradle
@@ -1,2 +1,12 @@
+pluginManagement {
+    repositories {
+        maven { url 'https://dl.bintray.com/kotlin/kotlin-eap' }
+        mavenCentral()
+        maven { url 'https://plugins.gradle.org/m2/' }
+    }
+}
 rootProject.name = 'Silica'
 
+include 'client'
+include 'common'
+include 'server'
