--- a/common/build.gradle
+++ b/common/build.gradle
@@ -34,6 +34,7 @@ dependencies {
     api 'org.apache.commons:commons-lang3:3.11'
     api 'com.google.code.gson:gson:2.8.6'
 
+    api "net.onedaybeard.artemis:artemis-odb:2.3.0"
 
     api 'net.sf.jopt-simple:jopt-simple:5.0.4'
 
@@ -41,7 +42,13 @@ dependencies {
     api 'com.electronwill.night-config:json:3.6.3'
     api 'com.electronwill.night-config:toml:3.6.3'
 
-    api 'org.joml:joml:1.9.25'
+    api "org.joml:joml:${jomlVersion}"
+    api 'org.apache.logging.log4j:log4j-api:2.14.0'
+    api 'org.apache.logging.log4j:log4j-core:2.14.0'
+    api 'com.google.guava:guava:30.1-jre'
+    api "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
+    api "it.unimi.dsi:fastutil:8.4.4"
+    api 'com.mojang:authlib:1.5.21'
 
     api platform("org.lwjgl:lwjgl-bom:$lwjglVersion")
     api "org.lwjgl:lwjgl"
@@ -66,9 +73,4 @@ dependencies {
     runtimeOnly "org.lwjgl:lwjgl-shaderc::$lwjglNatives"
     runtimeOnly "org.lwjgl:lwjgl-stb::$lwjglNatives"
     runtimeOnly "org.lwjgl:lwjgl-tinyexr::$lwjglNatives"
-    api "org.joml:joml:${jomlVersion}"
-    api 'org.apache.logging.log4j:log4j-api:2.14.0'
-    api 'org.apache.logging.log4j:log4j-core:2.14.0'
-    api 'com.google.guava:guava:30.1-jre'
-    api "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
 }
