--- a/server/build.gradle
+++ b/server/build.gradle
@@ -1,5 +1,22 @@
+apply plugin: 'java'
+apply plugin: 'org.jetbrains.kotlin.jvm'
 dependencies {
     implementation project(":common")
 
     implementation("io.github.microutils:kotlin-logging-jvm:2.0.4")
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
+}
+repositories {
+    maven { url 'https://dl.bintray.com/kotlin/kotlin-eap' }
+    mavenCentral()
+}
+compileKotlin {
+    kotlinOptions {
+        jvmTarget = "1.8"
+    }
+}
+compileTestKotlin {
+    kotlinOptions {
+        jvmTarget = "1.8"
+    }
 }
