Add vanilla state id mapping

--- a/client/build.gradle
+++ b/client/build.gradle
@@ -46,6 +46,7 @@ dependencies {
     runtimeOnly "org.lwjgl:lwjgl-stb::$lwjglNatives"
     runtimeOnly "org.lwjgl:lwjgl-tinyexr::$lwjglNatives"
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
+    implementation 'com.google.code.gson:gson:2.8.6'
 }
 repositories {
     maven { url 'https://dl.bintray.com/kotlin/kotlin-eap' }
