--- a/settings.gradle
+++ b/settings.gradle
@@ -8,5 +8,7 @@ pluginManagement {
 rootProject.name = 'Silica'
 
 include 'client'
+include 'client:opengl'
+include 'client:vulkan'
 include 'common'
 include 'server'
