--- a/build.gradle
+++ b/build.gradle
@@ -8,6 +8,7 @@ plugins {
 
 allprojects {
     repositories {
+        maven { url 'https://nexus.sandboxpowered.org/repository/maven-snapshots/' }
         maven { url 'https://nexus.sandboxpowered.org/repository/maven-public/' }
         mavenCentral()
         maven { url "https://oss.sonatype.org/content/repositories/snapshots/" }
