--- a/common/build.gradle
+++ b/common/build.gradle
@@ -4,7 +4,7 @@ group 'org.sandboxpowered'
 version '1.0-SNAPSHOT'
 
 dependencies {
-    runtime(project(':content'))
+    runtimeOnly project(':content')
 
     api platform('org.sandboxpowered.api:api:rework-SNAPSHOT')
     api 'org.sandboxpowered.api:base'
