--- a/build.gradle
+++ b/build.gradle
@@ -8,8 +8,8 @@ plugins {
 
 allprojects {
     repositories {
-        maven { url 'https://nexus.sandboxpowered.org/repository/maven-snapshots/' }
-        maven { url 'https://nexus.sandboxpowered.org/repository/maven-public/' }
+        maven { url 'https://maven.modded-mc.com/repository/sandbox-snapshot/' }
+        maven { url 'https://maven.modded-mc.com/repository/maven-public/' }
         mavenCentral()
         maven { url "https://oss.sonatype.org/content/repositories/snapshots/" }
         maven { url 'https://jitpack.io' }
