--- a/common/build.gradle
+++ b/common/build.gradle
@@ -4,15 +4,8 @@ group 'org.sandboxpowered'
 version '1.0-SNAPSHOT'
 
 dependencies {
-    runtimeOnly project(':content')
-
-    api platform('org.sandboxpowered.api:api:rework-SNAPSHOT')
-    api 'org.sandboxpowered.api:base'
-    api 'org.sandboxpowered.api:rendering'
-    api 'org.sandboxpowered.api:resources'
-
+    api "org.sandboxpowered.api:api:1.0.0-20210621.104442-5"
     api 'com.github.zafarkhaja:java-semver:0.9.0'
-    api 'org.sandboxpowered:SimpleEventHandler:2.0.3'
 
     api 'org.jetbrains:annotations:20.1.0'
 
@@ -56,6 +49,6 @@ dependencies {
 }
 
 
-static GString artemisContrib(String module) {
+static String artemisContrib(String module) {
     return "net.mostlyoriginal.artemis-odb:contrib-$module:2.5.0"
 }
