--- a/client/build.gradle
+++ b/client/build.gradle
@@ -32,6 +32,8 @@ dependencies {
 
     api platform("org.lwjgl:lwjgl-bom:$lwjglVersion")
 
+    api 'org.l33tlabs.twl:pngdecoder:1.0'
+
     api "org.lwjgl:lwjgl"
     api "org.lwjgl:lwjgl-assimp"
     api "org.lwjgl:lwjgl-glfw"
