--- a/common/build.gradle
+++ b/common/build.gradle
@@ -42,6 +42,7 @@ dependencies {
     runtimeOnly 'org.apache.logging.log4j:log4j-slf4j-impl:2.14.0'
     api 'com.google.guava:guava:30.1-jre'
     api "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
+    api "org.jetbrains.kotlin:kotlin-reflect"
     api "it.unimi.dsi:fastutil:8.4.4"
     api 'com.mojang:authlib:1.5.21'
 
