--- a/build.gradle
+++ b/build.gradle
@@ -4,6 +4,7 @@ plugins {
     id 'application'
     id 'java'
     id 'org.jetbrains.kotlin.jvm' version '1.5.30'
+    id 'org.graalvm.buildtools.native' version '0.9.5'
 }
 
 allprojects {
@@ -19,6 +20,7 @@ allprojects {
 subprojects {
     apply plugin: 'java'
     apply plugin: 'org.jetbrains.kotlin.jvm'
+    apply plugin: 'org.graalvm.buildtools.native'
 
     java {
         toolchain {
