--- a/client/build.gradle
+++ b/client/build.gradle
@@ -33,6 +33,7 @@ dependencies {
     api platform("org.lwjgl:lwjgl-bom:$lwjglVersion")
 
     api 'org.l33tlabs.twl:pngdecoder:1.0'
+    compileOnly "org.graalvm.nativeimage:svm:21.2.0"
 
     api "org.lwjgl:lwjgl"
     api "org.lwjgl:lwjgl-assimp"
