--- a/common/build.gradle
+++ b/common/build.gradle
@@ -5,6 +5,8 @@ group 'org.sandboxpowered'
 version '1.0-SNAPSHOT'
 
 dependencies {
+    compileOnly "org.graalvm.nativeimage:svm:21.2.0"
+
     api 'com.github.zafarkhaja:java-semver:0.9.0'
 
     api 'org.jetbrains:annotations:20.1.0'
@@ -37,9 +39,7 @@ dependencies {
     api 'com.electronwill.night-config:toml:3.6.3'
 
     api "org.joml:joml:${jomlVersion}"
-    api 'org.apache.logging.log4j:log4j-api:2.14.0'
-    runtimeOnly 'org.apache.logging.log4j:log4j-core:2.14.0'
-    runtimeOnly 'org.apache.logging.log4j:log4j-slf4j-impl:2.14.0'
+
     api 'com.google.guava:guava:30.1-jre'
     api "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
     api "org.jetbrains.kotlin:kotlin-reflect"
