--- a/common/build.gradle
+++ b/common/build.gradle
@@ -32,23 +32,24 @@ dependencies {
     api "com.typesafe.akka:akka-stream-typed_$scala_bin_version:$akka_version"
     api "com.lightbend.akka:akka-stream-alpakka-udp_$scala_bin_version:$alpakka_version"
 
-    api 'net.sf.jopt-simple:jopt-simple:5.0.4'
+    api "net.sf.jopt-simple:jopt-simple:5.0.4"
 
-    api 'com.electronwill.night-config:core:3.6.3'
-    api 'com.electronwill.night-config:json:3.6.3'
-    api 'com.electronwill.night-config:toml:3.6.3'
+    api "com.electronwill.night-config:core:3.6.3"
+    api "com.electronwill.night-config:json:3.6.3"
+    api "com.electronwill.night-config:toml:3.6.3"
 
     api "org.joml:joml:${jomlVersion}"
-    api 'org.apache.logging.log4j:log4j-api:2.14.0'
-    runtimeOnly 'org.apache.logging.log4j:log4j-core:2.14.0'
-    runtimeOnly 'org.apache.logging.log4j:log4j-slf4j-impl:2.14.0'
+    api "org.apache.logging.log4j:log4j-api:2.14.0"
+    runtimeOnly "org.apache.logging.log4j:log4j-core:2.14.0"
+    runtimeOnly "org.apache.logging.log4j:log4j-slf4j-impl:2.14.0"
     api 'com.google.guava:guava:30.1-jre'
     api "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
     api "org.jetbrains.kotlin:kotlin-reflect"
+    api "org.reflections:reflections:0.10.2"
     api "it.unimi.dsi:fastutil:8.4.4"
-    api 'com.mojang:authlib:1.5.21'
+    api "com.mojang:authlib:1.5.21"
 
-    api 'io.netty:netty-all:4.1.56.Final'
+    api "io.netty:netty-all:4.1.56.Final"
 
     api "io.ktor:ktor-client-core:$ktorVersion"
     api "io.ktor:ktor-client-cio:$ktorVersion"
