Move vanilla modules into modules folder

--- a/modules/vanilla/build.gradle
+++ b/modules/vanilla/build.gradle
@@ -2,7 +2,7 @@ subprojects {
     dependencies {
         api project(':api')
         if (project.name != "common") {
-            api project(":vanilla:common")
+            api project(":modules:vanilla:common")
         }
     }
 }
