--- a/server/build.gradle
+++ b/server/build.gradle
@@ -5,6 +5,7 @@ dependencies {
 
     implementation project(":modules:vanilla:1-17-1:network")
     implementation project(":modules:vanilla:1-17-1:content")
+    implementation project(":modules:vanilla:1-17-1:world")
 
     implementation("io.github.microutils:kotlin-logging-jvm:2.0.4")
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
