--- a/settings.gradle
+++ b/settings.gradle
@@ -17,5 +17,4 @@ include 'api'
 include 'modules:vanilla:common'
 include 'modules:vanilla:1-17-1:content'
 include 'modules:vanilla:1-17-1:network'
-include 'modules:vanilla:1-19:content'
-include 'modules:vanilla:1-19:network'
+include 'modules:vanilla:1-17-1:world'
