--- a/settings.gradle
+++ b/settings.gradle
@@ -18,3 +18,4 @@ include 'modules:vanilla:common'
 include 'modules:vanilla:1-17-1:content'
 include 'modules:vanilla:1-17-1:network'
 include 'modules:vanilla:1-17-1:world'
+include 'modules:plugin:test'
