--- a/server/build.gradle
+++ b/server/build.gradle
@@ -8,11 +8,10 @@ dependencies {
     implementation project(":modules:vanilla:1-18:world")
     implementation project(":modules:plugin:test")
 
-    implementation("io.github.microutils:kotlin-logging-jvm:2.0.4")
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
-    api 'com.google.code.gson:gson:2.8.6'
+    implementation libs.kotlin.logging
+    implementation libs.kotlin.stdlib
+    api libs.gson
 }
 repositories {
-    maven { url 'https://dl.bintray.com/kotlin/kotlin-eap' }
     mavenCentral()
 }
