--- a/common/build.gradle
+++ b/common/build.gradle
@@ -1,67 +1,40 @@
-project.ext.jomlVersion = "1.9.25"
-project.ext.ktorVersion = "1.6.3"
-
 group 'org.sandboxpowered'
 version '1.0-SNAPSHOT'
 
 dependencies {
     api project(":api")
 
-    api 'com.github.zafarkhaja:java-semver:0.9.0'
+    api libs.semver
 
-    api 'org.jetbrains:annotations:20.1.0'
+    api libs.jb.annotations
 
-    api 'commons-io:commons-io:2.8.0'
-    api 'org.apache.commons:commons-lang3:3.11'
-    api 'com.google.code.gson:gson:2.8.6'
-    api 'com.google.inject:guice:5.0.0-BETA-1'
+    api libs.commons.io
+    api libs.commons.lang
+    api libs.gson
+    api libs.guice
 
-    api 'com.mojang:brigadier:1.0.17'
+    api libs.brigadier
+    api libs.bundles.artemis
+    api libs.bundles.akka
 
-    api 'net.onedaybeard.artemis:artemis-odb:2.3.0'
+    api libs.jopt
 
-    api artemisContrib('core')
-    api artemisContrib('eventbus')
-    api artemisContrib('plugin-singleton')
-    api artemisContrib('plugin-operations')
+    api libs.bundles.nightconfig
 
-    def akka_version = '2.6.10'
-    def alpakka_version = '2.0.2'
-    def scala_bin_version = '2.13'
-    api "com.typesafe.akka:akka-actor-typed_$scala_bin_version:$akka_version"
-    api "com.typesafe.akka:akka-stream-typed_$scala_bin_version:$akka_version"
-    api "com.lightbend.akka:akka-stream-alpakka-udp_$scala_bin_version:$alpakka_version"
+    api libs.joml
+    api libs.log4j
+    runtimeOnly libs.bundles.log4j.runtime
+    api libs.guava
+    api libs.kotlin.stdlib
+    api libs.kotlin.reflect
+    api libs.reflections
+    api libs.fastutil
+    api libs.authlib
 
-    api "net.sf.jopt-simple:jopt-simple:5.0.4"
+    api libs.bundles.ktor.client
 
-    api "com.electronwill.night-config:core:3.6.3"
-    api "com.electronwill.night-config:json:3.6.3"
-    api "com.electronwill.night-config:toml:3.6.3"
-
-    api "org.joml:joml:${jomlVersion}"
-    api "org.apache.logging.log4j:log4j-api:2.14.0"
-    runtimeOnly "org.apache.logging.log4j:log4j-core:2.14.0"
-    runtimeOnly "org.apache.logging.log4j:log4j-slf4j-impl:2.14.0"
-    api 'com.google.guava:guava:30.1-jre'
-    api "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
-    api "org.jetbrains.kotlin:kotlin-reflect"
-    api "org.reflections:reflections:0.10.2"
-    api "it.unimi.dsi:fastutil:8.4.4"
-    api "com.mojang:authlib:2.3.31"
-
-    api "io.ktor:ktor-client-core:$ktorVersion"
-    api "io.ktor:ktor-client-cio:$ktorVersion"
-    api "io.ktor:ktor-client-serialization:$ktorVersion"
-    api "io.ktor:ktor-client-gson:$ktorVersion"
-
-    api "net.kyori:adventure-api:4.9.2"
-    api "net.kyori:adventure-nbt:4.9.2"
-    api "net.kyori:adventure-text-minimessage:4.1.0-SNAPSHOT"
-    api "net.kyori:adventure-text-serializer-gson:4.9.2"
-    api "net.kyori:adventure-text-serializer-plain:4.9.2"
+    api libs.bundles.adventure.base
+    api libs.adventure.minimessage
+    api libs.bundles.adventure.serializers
 }
 
-
-static String artemisContrib(String module) {
-    return "net.mostlyoriginal.artemis-odb:contrib-$module:2.5.0"
-}
