--- a/modules/vanilla/1-18/network/build.gradle
+++ b/modules/vanilla/1-18/network/build.gradle
@@ -1,7 +1,6 @@
 dependencies {
-    api "io.netty:netty-all:4.1.56.Final"
+    implementation backendLibs.netty
 
-    api "net.kyori:adventure-text-minimessage:4.1.0-SNAPSHOT"
-    api "net.kyori:adventure-text-serializer-gson:4.9.2"
-    api "net.kyori:adventure-text-serializer-plain:4.9.2"
+    api libs.adventure.minimessage
+    api libs.bundles.adventure.serializers
 }
