Add unit tests to cover BlocTree serde
Also migrate tests to kotlin-test

--- a/build.gradle
+++ b/build.gradle
@@ -45,7 +45,7 @@ subprojects {
     }
 
     dependencies {
-        testImplementation testLibs.jupiter.api
+        testImplementation testLibs.kotlin.test
         testImplementation testLibs.jupiter.params
         testRuntimeOnly testLibs.jupiter.engine
         testImplementation testLibs.mockk
