--- a/versionCatalogues/testLibs.versions.toml
+++ b/versionCatalogues/testLibs.versions.toml
@@ -3,6 +3,7 @@ junit = "5.8.2"
 mockk = "1.12.3"
 
 [libraries]
+kotlin-test = { module = "org.jetbrains.kotlin:kotlin-test-junit5" }
 jupiter-api = { module = "org.junit.jupiter:junit-jupiter-api", version.ref = "junit" }
 jupiter-params = { module = "org.junit.jupiter:junit-jupiter-params", version.ref = "junit" }
 jupiter-engine = { module = "org.junit.jupiter:junit-jupiter-engine", version.ref = "junit" }
