--- a/versionCatalogues/commonLibs.versions.toml
+++ b/versionCatalogues/commonLibs.versions.toml
@@ -26,6 +26,7 @@ reflections = "0.10.2"
 authlib = "2.3.31"
 semver = "0.9.0"
 kotlinx_serialization = "1.3.2"
+jackson = "2.13.+"
 
 [libraries]
 commons-io = { module = "commons-io:commons-io", version.ref = "commons-io" }
@@ -69,6 +70,9 @@ guava = { module = "com.google.guava:guava", version.ref = "guava" }
 reflections = { module = "org.reflections:reflections", version.ref = "reflections" }
 authlib = { module = "com.mojang:authlib", version.ref = "authlib" }
 semver = { module = "com.github.zafarkhaja:java-semver", version.ref = "semver" }
+jackson-databind = { module = "com.fasterxml.jackson.core:jackson-databind", version.ref = "jackson" }
+jackson-kotlin = { module = "com.fasterxml.jackson.module:jackson-module-kotlin", version.ref = "jackson" }
+jackson-blackbird = { module = "com.fasterxml.jackson.module:jackson-module-blackbird", version.ref = "jackson" }
 
 [bundles]
 nightconfig = [
@@ -93,6 +97,11 @@ ktor-client = [
     "ktor-client-conneg",
     "ktor-serialization",
     "ktor-gson"
+]
+jackson = [
+    "jackson-databind",
+    "jackson-kotlin",
+    "jackson-blackbird"
 ]
 
 [plugins]
